--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skylark-utils-md",
+  "name": "skylark-markups-md",
   "version": "0.9.0",
   "description": "The skylark md utility library.",
   "main": "-",
@@ -10,7 +10,7 @@
   "homepage": "www.skylarkjs.org",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/skylarkjs/skylark-utils-md.git"
+    "url": "git+https://github.com/skylark-markups/skylark-markups-md.git"
   },
   "keywords": [
     "skylark",
@@ -24,9 +24,7 @@
   "license": "MIT",
   "bugs": "https://github.com/skylarkjs/skylark/issues",
   "devDependencies": {
-    "skylark-langx": "https://github.com/skylarklangx/skylark-langx#master",
-    "skylark-utils": "https://github.com/skylarkutils/skylark-utils#master",
-    "skylark-utils-dom": "https://github.com/skylarkutils/skylark-utils-dom#master"
+    "skylark-langx": "git+https://github.com/skylarklangx/skylark-langx.git#master"
   },
   "engines": {
     "node": ">=0.8.0"
